WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270414
REGRESSION(
274689@main
): [GTK][Debug] Triggers assert on WOFF2 tests
https://bugs.webkit.org/show_bug.cgi?id=270414
Summary
REGRESSION(274689@main): [GTK][Debug] Triggers assert on WOFF2 tests
Philippe Normand
Reported
2024-03-03 08:08:44 PST
STDERR: /app/webkit/Source/WTF/wtf/linux/RealTimeThreads.cpp(206) : void WTF::RealTimeThreads::realTimeKitMakeThreadRealTime(uint64_t, uint64_t, uint32_t) STDERR: ASSERTION FAILED: m_ptr STDERR: /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/RefPtr.h(68) : T& WTF::RefPtr<T, <template-parameter-1-2>, <template-parameter-1-3> >::operator*() const [with T = WebCore::SharedBuffer; _PtrTraits = WTF::RawPtrTraits<WebCore::SharedBuffer>; _RefDerefTraits = WTF::DefaultRefDerefTraits<WebCore::SharedBuffer>] STDERR: 1 0x7f536a6b3226 WTFCrash STDERR: 2 0x7f53755e1cf6 WTF::isIntegralOrPointerType() STDERR: 3 0x7f53759d65c1 WTF::RefPtr<WebCore::SharedBuffer, WTF::RawPtrTraits<WebCore::SharedBuffer>, WTF::DefaultRefDerefTraits<WebCore::SharedBuffer> >::operator*() const STDERR: 4 0x7f537b3503af WebCore::CachedFont::createCustomFontData(WebCore::SharedBuffer&, WTF::String const&, bool&) STDERR: 5 0x7f537b35020f WebCore::CachedFont::ensureCustomFontData(WebCore::SharedBuffer*) STDERR: 6 0x7f537b35007c WebCore::CachedFont::ensureCustomFontData() STDERR: 7 0x7f5379f2b6df WebCore::CachedFontLoadRequest::ensureCustomFontData() STDERR: 8 0x7f5379f24641 WebCore::CSSFontFaceSource::fontLoaded(WebCore::FontLoadRequest&) STDERR: 9 0x7f5379f2bb5a WebCore::CachedFontLoadRequest::fontLoaded(WebCore::CachedFont&) STDERR: 10 0x7f537b350799 WebCore::CachedFont::checkNotify(WebCore::NetworkLoadMetrics const&) STDERR: 11 0x7f537b34fe15 WebCore::CachedFont::finishLoading(WebCore::FragmentedSharedBuffer const*, WebCore::NetworkLoadMetrics const&) STDERR: 12 0x7f537b2ea9e6 WebCore::SubresourceLoader::didFinishLoading(WebCore::NetworkLoadMetrics const&) STDERR: 13 0x7f5376f3a90e WebKit::WebResourceLoader::didFinishResourceLoad(WebCore::NetworkLoadMetrics&&) STDERR: 14 0x7f5375ad3d52 auto IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}::operator()<WebCore::NetworkLoadMetrics>(WebCore::NetworkLoadMetrics&&) const STDERR: 15 0x7f5375ad6f51 void std::__invoke_impl<void, IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}, WebCore::NetworkLoadMetrics>(std::__invoke_other, IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}&&, WebCore::NetworkLoadMetrics&&) STDERR: 16 0x7f5375ad5ae7 std::__invoke_result<IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}, WebCore::NetworkLoadMetrics>::type std::__invoke<IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}, WebCore::NetworkLoadMetrics>(IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}&&, WebCore::NetworkLoadMetrics&&) STDERR: 17 0x7f5375ad3d9b decltype(auto) std::__apply_impl<IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}, std::tuple<WebCore::NetworkLoadMetrics>, 0ul>(IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}&&, std::tuple<WebCore::NetworkLoadMetrics>&&, std::integer_sequence<unsigned long, 0ul>) STDERR: 18 0x7f5375ad3dd9 decltype(auto) std::apply<IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}, std::tuple<WebCore::NetworkLoadMetrics> >(IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&)::{lambda((auto:1&&)...)#1}&&, std::tuple<WebCore::NetworkLoadMetrics>&&) STDERR: 19 0x7f5375ad3e3e void IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&) STDERR: 20 0x7f5375ad255f void IPC::handleMessage<Messages::WebResourceLoader::DidFinishResourceLoad, WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&)>(IPC::Connection&, IPC::Decoder&, WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&)) STDERR: 21 0x7f5375ad1910 WebKit::WebResourceLoader::didReceiveWebResourceLoaderMessage(IPC::Connection&, IPC::Decoder&) STDERR: 22 0x7f5376f300a3 WebKit::NetworkProcessConnection::didReceiveMessage(IPC::Connection&, IPC::Decoder&) STDERR: 23 0x7f537651c14f IPC::Connection::dispatchMessage(IPC::Decoder&) STDERR: 24 0x7f537651c39e IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) STDERR: 25 0x7f537651c77b IPC::Connection::dispatchOneIncomingMessage() STDERR: 26 0x7f537651bd92 operator() STDERR: 27 0x7f5376523bb4 call STDERR: 28 0x7f536904426d WTF::Function<void ()>::operator()() const STDERR: 29 0x7f536a75628f WTF::RunLoop::performWork() STDERR: 30 0x7f536a817faa operator() STDERR: 31 0x7f536a817fce _FUN STDERR: WebKitWebProcess terminated (pid 449721) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-03-03 08:18:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25388
EWS
Comment 2
2024-03-04 01:25:33 PST
Committed
275617@main
(81bff4c4360f): <
https://commits.webkit.org/275617@main
> Reviewed commits have been landed. Closing PR #25388 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug