REGRESSION(274689@main): [GTK][Debug] Triggers assert on WOFF2 tests https://bugs.webkit.org/show_bug.cgi?id=270414

Reviewed by Michael Catanzaro.

The convertWOFFToSfntIfNecessary() function can set the buffer to nullptr, specially if the
woff2::ConvertWOFF2ToTTF() call in convertWOFFToSfnt() fails. This patch re-introduces the buffer
check that was removed in 274689@main.

* Source/WebCore/loader/cache/CachedFont.cpp:
(WebCore::CachedFont::createCustomFontData):

Canonical link: https://commits.webkit.org/275617@main